--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <br>
      1.  Natural simulations <br>
         <br>
-        Another big portion of this course was on learning Natural Simulations    <br>
+        A big portion of this course was on learning Natural Simulations    <br>
         by Dan Shiffman on Khan Academy. Main stuff that was went through   <br>
         was noise vectors, oscillations and other things. I had an insane amount of fun with <br>
         the projects in this moduel as it was interesting to "re-learn everything again.    <br>
